fix: add dark mode styling

--- a/css/style.css
+++ b/css/style.css
@@ -1174,6 +1174,14 @@ video {
     --tw-shadow: var(--tw-shadow-colored);
   }
 
+  .dark\:outline-indigo-600 {
+    outline-color: #4f46e5;
+  }
+
+  .dark\:outline-slate-900 {
+    outline-color: #0f172a;
+  }
+
   .dark\:placeholder\:text-gray-500::-moz-placeholder {
     --tw-text-opacity: 1;
     color: rgb(107 114 128 / var(--tw-text-opacity));
